syntax = "proto3";

option csharp_namespace = "GrpcService";

package OperatorActions;

service OperatorActions {
  rpc Reserve (OperatorActionsReserveRequest) returns (OperatorActionsReserveReply);
  rpc Activate (OperatorActionsRequest) returns (OperatorActionsReply);
  rpc Deactivate (OperatorActionsRequest) returns (OperatorActionsReply);
  rpc Terminate (OperatorActionsRequest) returns (OperatorActionsReply);
  rpc ListUid (OperatorActionUidRequest) returns (stream OperatorActionUidReply);
}

message OperatorActionsReserveRequest {
  string token = 1;
  string operator = 2;
  string municipio = 3;
  string rua = 4;
  string numero = 5;
  string apartamento = 6;
}

message OperatorActionsReserveReply {
  string status = 1;
  string uid = 2;
}
message OperatorActionUidReply{
	string municipio = 1;
	string rua = 2;
	string numero = 3;
	string apartamento = 4;
	string Uid = 5;
}

message OperatorActionUidRequest{
	string token = 1;
	string operator = 2;
}
message OperatorActionsRequest {
	string token = 1;
	string operator = 2;
	string uid = 3;
}

message OperatorActionsReply {
	string status = 1;
	int32 et = 3;
}